main section tablet view fix

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -51,7 +51,7 @@
   .main {
     max-width: 768px;
     height: 100%;
-    margin: 32px 40px 0 40px;
+    margin: 32px 40px 32px 40px;
     background-color: rgb(248, 244, 240);
   }
   .sidebar {
